--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Suhail Nooristani",
   "license": "ISC",
   "dependencies": {
+    "game-events": "file:../events",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   },
